[package]
name = "rust_olc_pge"
version = "0.2.0"
authors = ["Jonny Kenyon <granitrocky@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
name = "rust_olc_pge"
crate-type = ["rlib"]

[build-dependencies]
bindgen = "0.59"


[dependencies]
itertools = "0.10"
image = "0.23"
blend = "0.6.1"
bmp = "0.5.0"
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
wgpu = { version = "0.11" , features = ["webgl"] }
futures = "0.3"
num-traits = "0.2.14"
pretty-hex ="0.2.0"
lazy_static = "*"
winit = { version = "0.25.0" }
inline-spirv = "0.1.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
gltf = { version = "0.16.0", features = ["import"] }
bitflags = "1.2.1"
olc_pge_macros = { version = "0.1.0", path = "../olc_pge_macros" }
quote = "1.0"
#rodio = "0.14.0"

[target.'cfg(target_arch = "windows")'.dependencies]
rapier = {version = "*", features = [ "simd-nightly" ] }
lazy_static = "*"
bmp = "0.5.0"
rand = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "*"
rapier = {version = "*", features = [ "wasm-bindgen", "simd-nightly" ] } 
winit = { version = "0.25.0",  features = ["web-sys"] }
console_log = "0.1.2"
instant = "0.1.9"
console_error_panic_hook = "*"
js-sys  = "*"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[features]
js = []

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "^0.3.55"
optional = false
features = [
         "console",
         "WebGlBuffer",
         "WebGlRenderingContext",
         "WebGl2RenderingContext",
         "WebGlProgram",
         "WebGlSampler",
         "WebGlTexture",
         "WebGlProgram",
         "WebGlShader",
         "Document",
         "Navigator",
         "Node",
         "NodeList",
         "Gpu",
         "GpuAdapter",
         "GpuAddressMode",
         "GpuBindGroup",
         "GpuBindGroupDescriptor",
         "GpuBindGroupEntry",
         "GpuBindGroupLayout",
         "GpuBindGroupLayoutDescriptor",
         "GpuBindGroupLayoutEntry",
         "GpuBlendComponent",
         "GpuBlendFactor",
         "GpuBlendOperation",
         "GpuBlendState",
         "GpuBuffer",
         "GpuBufferBinding",
         "GpuBufferBindingLayout",
         "GpuBufferBindingType",
         "GpuBufferDescriptor",
         "GpuBufferUsage",
         "GpuCanvasContext",
         "GpuCanvasConfiguration",
         "GpuColorDict",
         "GpuColorTargetState",
         "GpuColorWrite",
         "GpuCommandBuffer",
         "GpuCommandBufferDescriptor",
         "GpuCommandEncoder",
         "GpuCommandEncoderDescriptor",
         "GpuCompareFunction",
         "GpuCompilationInfo",
         "GpuCompilationMessage",
         "GpuCompilationMessageType",
         "GpuComputePassDescriptor",
         "GpuComputePassEncoder",
         "GpuComputePipeline",
         "GpuComputePipelineDescriptor",
         "GpuCullMode",
         "GpuDepthStencilState",
         "GpuDevice",
         "GpuDeviceDescriptor",
         "GpuDeviceLostInfo",
         "GpuDeviceLostReason",
         "GpuErrorFilter",
         "GpuExtent3dDict",
         "GpuFeatureName",
         "GpuFilterMode",
         "GpuFragmentState",
         "GpuFrontFace",
         "GpuImageCopyBuffer",
         "GpuImageCopyTexture",
         "GpuImageDataLayout",
         "GpuIndexFormat",
         "GpuLoadOp",
         "GpuMapMode",
         "GpuMultisampleState",
         "GpuObjectDescriptorBase",
         "GpuOrigin2dDict",
         "GpuOrigin3dDict",
         "GpuOutOfMemoryError",
         "GpuPipelineDescriptorBase",
         "GpuPipelineLayout",
         "GpuPipelineLayoutDescriptor",
         "GpuPipelineStatisticName",
         "GpuPowerPreference",
         "GpuPrimitiveState",
         "GpuPrimitiveTopology",
         "GpuProgrammableStage",
         "GpuQuerySet",
         "GpuQuerySetDescriptor",
         "GpuQueryType",
         "GpuQueue",
         "GpuRenderBundle",
         "GpuRenderBundleDescriptor",
         "GpuRenderBundleEncoder",
         "GpuRenderBundleEncoderDescriptor",
         "GpuRenderPassColorAttachment",
         "GpuRenderPassDepthStencilAttachment",
         "GpuRenderPassDescriptor",
         "GpuRenderPassEncoder",
         "GpuRenderPipeline",
         "GpuRenderPipelineDescriptor",
         "GpuRequestAdapterOptions",
         "GpuSampler",
         "GpuSamplerBindingLayout",
         "GpuSamplerBindingType",
         "GpuSamplerDescriptor",
         "GpuShaderModule",
         "GpuShaderModuleDescriptor",
         "GpuShaderStage",
         "GpuStencilFaceState",
         "GpuStencilOperation",
         "GpuStorageTextureAccess",
         "GpuStorageTextureBindingLayout",
         "GpuStoreOp",
         "GpuSupportedFeatures",
         "GpuSupportedLimits",
         "GpuTexture",
         "GpuTextureAspect",
         "GpuTextureBindingLayout",
         "GpuTextureDescriptor",
         "GpuTextureDimension",
         "GpuTextureFormat",
         "GpuTextureSampleType",
         "GpuTextureUsage",
         "GpuTextureView",
         "GpuTextureViewDescriptor",
         "GpuTextureViewDimension",
         "GpuUncapturedErrorEvent",
         "GpuUncapturedErrorEventInit",
         "GpuValidationError",
         "GpuVertexAttribute",
         "GpuVertexBufferLayout",
         "GpuVertexFormat",
         "GpuVertexState",
         "GpuVertexStepMode",
         "HtmlCanvasElement",
         "Window",
         "Element",
         "FileReader",
         "Headers",
         "Request",
         "RequestInit",
         "RequestMode",
         "Response",
         "ReadableStream",
         ]
