[package]
name = "og_engine"
version = "0.3.0"
authors = ["Jonny Kenyon <granitrocky@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]
name = "og_engine"
crate-type = ["rlib"]

[build-dependencies]
bindgen = "0.59"


[dependencies]
itertools = "0.10"
image = "0.23"
blend = "0.6.1"
bmp = "0.5.0"
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
wgpu = { version = "0.18" , features = ["webgl"] }
futures = "0.3"
num-traits = "0.2.14"
pretty-hex ="0.2.0"
lazy_static = "*"
winit = { version = "0.28.0" }
inline-spirv = "0.1.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
gltf = { version = "0.16.0", features = ["import"] }
bitflags = "1.2.1"
serde = "1.0"
serde_yaml = "0.8"
#olc_pge_macros = { version = "0.1.0", path = "../olc_pge_macros" }
quote = "1.0"
rapier3d = {version = "*", features = [ "simd-stable" ] }
#rodio = "0.14.0"

[target.'cfg(target_arch = "windows")'.dependencies]
lazy_static = "*"
bmp = "0.5.0"
rand = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "*"
rapier3d = {version = "*", features = [ "wasm-bindgen", "simd-stable" ] } 
#winit = { version = "0.28.0",  features = ["web-sys"] }
console_log = "*"
instant = "0.1.9"
console_error_panic_hook = "*"
js-sys  = "*"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"
console_log = "*" 

[features]
js = []

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3"
optional = false
features = [
         "console",
         "WebGlBuffer",
         "WebGlRenderingContext",
         "WebGl2RenderingContext",
         "WebGlProgram",
         "WebGlSampler",
         "WebGlTexture",
         "WebGlProgram",
         "WebGlShader",
         "Document",
         "Navigator",
         "Node",
         "NodeList", 
         "HtmlCanvasElement",
         "Window",
         "Element",
         "FileReader",
         "Headers",
         "Request",
         "RequestInit",
         "RequestMode",
         "Response", 
         "ReadableStream",
         ]
